force-app/main/default/objects/custom_create14__c/custom_create14__c.object-meta.xml
<CustomObject>
    <label>Custom created object14</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects14</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>