force-app/main/default/objects/custom_create14__c/fields/custom_create_14field529__c.field-meta.xml
<CustomField>
    <fullName>custom_create_14field529__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 14field529</label>
    <type>Checkbox</type>
</CustomField>